software-layer/k8s/apps/staging/wizarr/resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: wizarr
  name: wizarr
spec:
  rules:
    - host: wizarr-staging.local.bcbrookman.com
      http:
        paths:
          - backend:
              service:
                name: wizarr
                port:
                  name: http
            path: /
            pathType: Prefix
